After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688671 - Small fixes for the glade plugin.
Small fixes for the glade plugin.
Status: RESOLVED FIXED
Product: anjuta
Classification: Applications
Component: plugins: glade
unspecified
Other All
: Normal normal
: ---
Assigned To: Anjuta maintainers
Anjuta maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-19 19:29 UTC by Carl-Anton Ingmarsson
Modified: 2012-11-19 21:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
glade: Fix the palette not being shown. (1.45 KB, patch)
2012-11-19 19:29 UTC, Carl-Anton Ingmarsson
committed Details | Review
glade: Fix the images in the palette toggles used for choosing the edit mode. (1.60 KB, patch)
2012-11-19 19:29 UTC, Carl-Anton Ingmarsson
committed Details | Review

Description Carl-Anton Ingmarsson 2012-11-19 19:29:54 UTC
See the attached patches.
Comment 1 Carl-Anton Ingmarsson 2012-11-19 19:29:56 UTC
Created attachment 229398 [details] [review]
glade: Fix the palette not being shown.

Call gtk_widget_show_all() on the palette_box since anjuta_shell_add_widget() doesn't do it
anymore. Also change back the palette_box to vertical which was mistakenly changed in
9a2c4a1055c4c70294e1637f9d74da67d2034b88.
Comment 2 Carl-Anton Ingmarsson 2012-11-19 19:29:59 UTC
Created attachment 229399 [details] [review]
glade: Fix the images in the palette toggles used for choosing the edit mode.

Glade registers the images as stock icons so we can use gtk_image_new_from_stock() to
create them.
Comment 3 Sébastien Granjoux 2012-11-19 21:12:18 UTC
Comment on attachment 229398 [details] [review]
glade: Fix the palette not being shown.

Thanks.
Comment 4 Sébastien Granjoux 2012-11-19 21:12:58 UTC
Comment on attachment 229399 [details] [review]
glade: Fix the images in the palette toggles used for choosing the edit mode.

Thanks, I have committed this one too. The icon doesn't appear with a old version of glade though.