glade: Fix the palette not being shown.

Call gtk_widget_show_all() on the palette_box since anjuta_shell_add_widget() doesn't do it
anymore. Also change back the palette_box to vertical which was mistakenly changed in
9a2c4a1055c4c70294e1637f9d74da67d2034b88.

https://bugzilla.gnome.org/show_bug.cgi?id=688671